refactor : Notification 관련 1차 리팩토링